--- a/playbooks/roles/zookeeper/tasks/exhibitor.yml
+++ b/playbooks/roles/zookeeper/tasks/exhibitor.yml
@@ -1,5 +1,6 @@
 ---
-- set_fact:
+- name: Calculating Exhibitor version
+  set_fact:
     exhibitor_version: "{{ exhibitor.version | calculate( exhibitor.latest ) }}"
 - set_fact:
     exhibitor_port:    "{{ exhibitor_port | default( exhibitor.port ) }}"
