--- a/playbooks/utils/service.yml
+++ b/playbooks/utils/service.yml
@@ -10,15 +10,15 @@
 # - Verifies service endpoint responds at {{ port }} within {{ timeout }} seconds
 # - Verifies http://127.0.0.1:{{ port }}{{ path }} to return {{ status }} code and {{ content }}
 # ===================================================================================================
-# - Required variables are: service, title, url, archive, home, command. Other are optional.
+# - Required variables are: service, title, command. Other are optional.
 # ===================================================================================================
 - debug: var=service
 - debug: var=title
-- debug: var=url
-- debug: var=archive
-- debug: var=home
 - debug: var=command
 
+- debug: msg="url = {{ url | default('') }}"
+- debug: msg="archive = {{ archive | default('') }}"
+- debug: msg="home = {{ home | default('') }}"
 - debug: msg="test = {{ test | default({}) }}"
 - debug: msg="configs = '{{ configs | default({}) }}'"
 - debug: msg="env_config = '{{ env_config | default('') }}'"
@@ -36,25 +36,29 @@
   get_url:
     url:  "{{ url }}"
     dest: "{{ archive }}"
+  when: ( url is defined ) and ( archive is defined )
 
 - debug: msg="Deleting '{{ home }}'!"
-  when: clean | default(True)
+  when: ( home is defined ) and ( clean | default(True))
 
 - file: path={{ home }} state=absent
-  when: clean | default(True)
+  when: ( home is defined ) and ( clean | default(True))
 
 - file: path={{ home }} state=directory
+  when: home is defined
 
 - name: Unpacking {{ title }}
   unarchive:
     src:  "{{ archive }}"
     dest: "{{ home }}"
     copy: false
+  when: ( archive is defined ) and ( home is defined )
 
 - name:     Running {{ title }} test
   command:  "{{ test.run }}"
   register: test_out
-  when:     test is defined
+  ignore_errors: yes # We don't want to fail if test command sends some output to stderr
+  when: test is defined
 
 - name: Verifying {{ title }} test
   assert:
@@ -62,9 +66,7 @@
       - "'{{ test.expect }}' in '{{ test_out.stdout }}'"
   when: test is defined
 
-  # fail: msg="Expected to find '{{ test.expect }}' in '{{ test_out.stdout }}', but didn't."
-
-- file: path={{ item.to }} state=directory
+- command: mkdir -p $(dirname {{ item.to }})
   with_items:
     - "{{ configs }}"
   when: configs is defined
@@ -98,5 +100,7 @@
   when: ( port is defined ) and (( path is defined ) or ( status is defined ) or ( content is defined ))
 
 - name: Verifying {{ title }} HTTP endpoint content
-  fail: msg="Expected to find '{{ http_out.content }}' in '{{ content }}', but didn't."
-  when: ( port is defined ) and ( content is defined ) and ( '{{ content }}' not in '{{ http_out.content }}' )
+  assert:
+    that:
+      - "'{{ content }}' in '{{ http_out.content }}'"
+  when: ( content is defined ) and ( http_out is defined )
