--- a/playbooks/nexus-ubuntu.yml
+++ b/playbooks/nexus-ubuntu.yml
@@ -15,5 +15,5 @@
     - { role: base,       when: periodic }
     - { role: ansible,    when: periodic }
     - { role: java,       when: periodic }
-    # - nexus
+    - nexus
     - run-after
