--- a/playbooks/roles/nexus/tasks/main.yml
+++ b/playbooks/roles/nexus/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 - set_fact:
-    nexus_port: "{{ nexus_port | default( nexus.port ) }}"
+    nexus_home: "{{ nexus.home }}/nexus-{{ nexus.version }}"
 
 - include: "{{ common.utils.service }}"
   vars:
@@ -9,5 +9,14 @@
     url:         "{{ nexus.url     | tokens( nexus ) }}"
     archive:     "{{ nexus.archive | tokens( nexus ) }}"
     home:        "{{ nexus.home }}"
-    command:     "{{ nexus.home }}/nexus-{{ nexus.version }}/bin/nexus start"
-    port:        "{{ nexus_port }}"
+    configs:
+      - { from: "{{ playbook_dir }}/roles/nexus/templates/nexus.properties", 
+          to:   "{{ tomcat_home }}/lib" }
+    # Copying Nexus to webapps/ROOT. That would be easier if you kept the freaking war, Sonatype.
+    cleanup:
+      - rm -rf "{{ tomcat_root_app }}"
+      - cp     {{ nexus_home }}/lib/*.jar "{{ tomcat_home }}/lib" 
+      - cp -R  "{{ nexus_home }}/nexus"     "{{ tomcat_webapps }}"
+      - mv     "{{ tomcat_webapps }}/nexus" "{{ tomcat_root_app }}"
+    command:   "{{ tomcat_home }}/bin/catalina.sh run"
+    port:      "{{ tomcat_port }}"
