--- a/playbooks/roles/tomcat/tasks/main.yml
+++ b/playbooks/roles/tomcat/tasks/main.yml
@@ -1,21 +1,24 @@
 ---
 - name: Calculating Tomcat version
-  set_fact:
-    tomcat_version: "{{ tomcat.version | calculate( tomcat.latest ) }}"
+  set_fact: 
+    tomcat_version:  "{{ tomcat_version | default( tomcat.version ) | calculate( tomcat.latest ) }}"
 - set_fact:
-    tomcat_port:    "{{ tomcat_port | default( tomcat.port ) }}"
-    tomcat_home:    "{{ tomcat.home }}/apache-tomcat-{{ tomcat_version }}"
+    tomcat_port:     "{{ tomcat_port | default( tomcat.port ) }}"
+    tomcat_home:     "{{ tomcat.home }}/apache-tomcat-{{ tomcat_version }}"
+- set_fact:    
+    tomcat_webapps:  "{{ tomcat_home }}/webapps" 
+    tomcat_root_app: "{{ tomcat_home }}/webapps/ROOT"
 
 - include: "{{ common.utils.download }}"
   vars:
     title:   Tomcat
-    url:     "{{ tomcat.url     | tokens({ 'version': tomcat_version }) }}"
+    url:     "{{ tomcat.url     | tokens({ 'version': tomcat_version, 
+                                           'N'      : 7 if tomcat_version.startswith('7') else 8 }) }}"
     archive: "{{ tomcat.archive | tokens({ 'version': tomcat_version }) }}"
     home:    "{{ tomcat.home }}"
     configs:
       - { from: "{{ playbook_dir }}/roles/tomcat/templates/server.xml",
           to:   "{{ tomcat_home }}/conf/server.xml" }
     cleanup: 
-      - rm -rf '{{ tomcat_home }}/temp' '{{ tomcat_home }}/webapps' '{{ tomcat_home }}/work'
-      - mkdir  '{{ tomcat_home }}/temp' '{{ tomcat_home }}/webapps' '{{ tomcat_home }}/work'
-            
+      - rm    -rf '{{ tomcat_webapps }}'  '{{ tomcat_home }}/temp' '{{ tomcat_home }}/work'
+      - mkdir -p  '{{ tomcat_root_app }}' '{{ tomcat_home }}/temp' '{{ tomcat_home }}/work'
