--- a/playbooks/roles/tomcat/vars/main.yml
+++ b/playbooks/roles/tomcat/vars/main.yml
@@ -1,11 +1,11 @@
 ---
 tomcat: {
-  version: latest, # 8.0.15 or latest - https://tomcat.apache.org/download-80.cgi
+  version: latest, # 8.0.15, 7.0.57, latest - https://tomcat.apache.org/download-80.cgi
   latest: {
-    command: "curl -s 'https://tomcat.apache.org/download-80.cgi' | grep 'apache-tomcat-' | grep '.zip' | head -1 | sed -E 's/.+apache-tomcat-//' | sed -E 's/\\.zip.+//'",
+    command: "curl -s 'https://tomcat.apache.org/download-80.cgi' | grep 'apache-tomcat-' | grep '.zip' | head -1 | sed -r 's/.+apache-tomcat-//' | sed -r 's/\\.zip.+//'",
     pattern: '^\d+\.\d+\.\d+$'
   },  
-  url:     'http://www.eu.apache.org/dist/tomcat/tomcat-8/v<version>/bin/apache-tomcat-<version>.tar.gz',
+  url:     'http://www.eu.apache.org/dist/tomcat/tomcat-<N>/v<version>/bin/apache-tomcat-<version>.tar.gz',
   port:    8080,
   archive: /opt/tomcat-<version>.tar.gz,
   home:    /opt/tomcat
