--- a/playbooks/roles/zookeeper/vars/main.yml
+++ b/playbooks/roles/zookeeper/vars/main.yml
@@ -9,7 +9,7 @@ zookeeper: {
 }
 
 exhibitor: {
-  version: latest, # 1.5.2 or latest - https://github.com/Netflix/exhibitor/releases
+  version: latest, # 1.5.2, latest - https://github.com/Netflix/exhibitor/releases
   port:    8080,
   gradle_provider: '{{ common.repo.github }}/evgeny-goldin/gradle-provider.git',
   home:            /opt/exhibitor,
