--- a/playbooks/vars/common.yml
+++ b/playbooks/vars/common.yml
@@ -16,9 +16,11 @@ common: {
   },
 
   repo: {
-    github:  'https://github.com',
-    jcenter: 'https://jcenter.bintray.com',
-    bintray: 'https://dl.bintray.com',
+    github:   'https://github.com',
+    jcenter:  'https://jcenter.bintray.com',
+    bintray:  'https://dl.bintray.com',
+    jfrog:    'https://repo.jfrog.org',
+    sonatype: 'https://download.sonatype.com'
   },
 
   utils: {
