--- a/playbooks/roles/skydns/tasks/etcd.yml
+++ b/playbooks/roles/skydns/tasks/etcd.yml
@@ -12,8 +12,7 @@
     archive:     "{{ etcd.archive | tokens( etcd ) }}"
     home:        "{{ etcd.home }}"
     configs:
-      - { from: "{{ playbook_dir }}/roles/skydns/templates/etcd-config", 
-          to:   "{{ etcd.config }}" }
+      - { role: skydns, from: etcd-config, to: "{{ etcd.config }}" }
     env_config:  "{{ etcd.config }}"
     test:        { run: "{{ etcd_bin }} --version", expect: "{{ etcd.version }}" }
     command:     "{{ etcd_bin }} $ETCD_OPTS"
