--- a/playbooks/roles/nexus/vars/main.yml
+++ b/playbooks/roles/nexus/vars/main.yml
@@ -1,8 +1,8 @@
 ---
 nexus: {
-  version:    '2.11.1-01',
-  port:       8080,
-  standalone: yes,
+  version: '2.11.1-01',
+  port:    8080,
+  run:     standalone, # standalone, war
   standalone: {
     url:     '{{ common.repo.sonatype }}/nexus/oss/nexus-<version>-bundle.tar.gz',
     archive: '/opt/nexus-<version>.tar.gz',
@@ -10,6 +10,6 @@ nexus: {
   },
   war: {
     url:     '{{ common.repo.jcenter }}/org/sonatype/nexus/nexus-webapp/<version>/nexus-webapp-<version>.war',
-    archive: '/opt/nexus-<version>.war'   
+    archive: '/opt/nexus-<version>.war'
   }
 }
